--- a/client/windows/index.html
+++ b/client/windows/index.html
@@ -55,9 +55,9 @@
 
     <div class="duplicated-files-modal" id="files-modal">
         <span class="close-btn" id="close-btn">&times;</span>
-        <div class="center list">
+        <div class="center">
             <h2>Duplicated files</h2>
-            <ul class="list-files" id="duplicated-list-files"></ul>
+            <ul class="duplicated-list-files" id="duplicated-list-files"></ul>
         </div>
     </div>
 
