feature(design): worked on the ux and design

--- a/client/windows/index.html
+++ b/client/windows/index.html
@@ -53,11 +53,13 @@
         </div>
     </div>
 
-    <div class="duplicated-files-modal" id="files-modal">
-        <span class="close-btn" id="close-btn">&times;</span>
-        <div class="center">
-            <h2>Duplicated files</h2>
-            <ul class="duplicated-list-files" id="duplicated-list-files"></ul>
+    <div class="dup-parent" id="dup-parent">
+        <div class="duplicated-files-modal" id="files-modal">
+            <span class="close-btn" id="close-btn">&times;</span>
+            <div class="center">
+                <h2>Duplicated files</h2>
+                <ul class="duplicated-list-files" id="duplicated-list-files"></ul>
+            </div>
         </div>
     </div>
 
